@@ -67,6 +67,7 @@ and represent cursor movement and editing functions.</p>
   <li> <b>control-e</b> - move to end of the line</li>
 
   <li> <b>control-r</b> - search command lines (history) backwards</li>
+  <li> <b>control-u</b> - delete under cursor (SparForte addition)</li>
   <li> <b>control-]</b> - character search forwards. (Follow with the
 key to search for.)</li>
   <li> <b>tab</b> - complete the filename</li>
@@ -77,7 +78,8 @@ key to search for.)</li>
 <p>If you prefer to use <b>vi cursor movement</b> instead, press the
 escape
 key to enter vi mode. Press escape again to return to emacs mode. In vi
-mode, you can use lower-case 'h', 'j', 'k', 'l', '^' and '$'. Filename
+mode, you can use lower-case 'h', 'j', 'k', 'l', 'x' (delete under cursor),
+'^' and '$'. Filename
 completion is accomplished with two escape key presses in a row.
 </p>
 
